# Blog_AutoUpload_Script

./: README.md
scirpt/: config.ini  pyproject.toml
scirpt/src/: __init__.py  caller.py  config.py  openai_caller.py
script/: config.ini
script/src/: caller.py  config.py
