[tool.poetry]
name = "auto-upload-script"
version = "0.1.0"
description = ""
authors = ["Two-Jay <djeeee1272@gmail.com>"]
readme = "README.md"
packages = [{include = "auto_upload_script"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
